--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,37 @@
       <artifactId>struts2-core</artifactId>
       <version>2.5.13</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.8.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.8.2</version>
+    </dependency>
 
   </dependencies>
   <build>
     <finalName>child</finalName>
+    <!--<plugins>-->
+      <!--<plugin>-->
+        <!--<groupId>org.mortbay.jetty</groupId>-->
+        <!--<artifactId>jetty-maven-plugin</artifactId>-->
+        <!--<version>8.1.16.v20140903</version>-->
+        <!--<configuration>-->
+          <!--<webApp>-->
+            <!--<contextPath>/${build.finalName}</contextPath>-->
+          <!--</webApp>-->
+          <!--<stopKey>CTRL+C</stopKey>-->
+          <!--<stopPort>8999</stopPort>-->
+          <!--<scanIntervalSeconds>10</scanIntervalSeconds>-->
+          <!--<scanTargets>-->
+            <!--<scanTarget>src/main/webapp/WEB-INF/web.xml</scanTarget>-->
+          <!--</scanTargets>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+    <!--</plugins>-->
   </build>
 </project>
